<resources>
    <string name="app_name">AmanteDeLasPeliculas_252116</string>
    <string name="genero">Genero</string>
    <string name="nombre_pelicula">John Wick 4</string>
    <string name="calificacion"> 10/10</string>
    <string name="vistas"> 1.2M</string>
    <string name="rentar">Rentar</string>
    <string name="comprar">Comprar</string>
    <string name="accion">Accion</string>
    <string name="disparos">Disparos</string>
    <string name="drama">Drama</string>
    <string name="hechos_reales">Hechos Reales</string>
    <string name="sinopsis">"John Wick: Chapter 4" sigue al legendario asesino retirado John Wick en su búsqueda de venganza contra la Alta Mesa, enfrentándose a nuevos enemigos y aliados en un mundo de asesinos.</string>
    <string name="tituloApp">JW Cinema</string>
    <string name="nombreLogin">Nombre de Usuario:</string>
    <string name="contrasenaLogin">Contraseña:</string>
    <string name="botonLogin">Iniciar Sesion</string>

</resources>